--- a/maxscale/docker-compose.yml
+++ b/maxscale/docker-compose.yml
@@ -6,6 +6,7 @@ services:
             MYSQL_ALLOW_EMPTY_PASSWORD: 'Y'
         volumes:
             - ./sql/primary1:/docker-entrypoint-initdb.d
+            command: mysqld --log-bin=mariadb-bin --binlog-format=ROW --server-id=3000
         ports:
             - "4001:3306"
 
