--- a/maxscale/docker-compose.yml
+++ b/maxscale/docker-compose.yml
@@ -1,21 +1,21 @@
 version: '2'
 services:
-    primary1:
+    master1:
         image: mariadb:latest
         environment:
             MYSQL_ALLOW_EMPTY_PASSWORD: 'Y'
         volumes:
-            - ./sql/primary1:/docker-entrypoint-initdb.d
+            - ./sql/master1:/docker-entrypoint-initdb.d
             command: mysqld --log-bin=mariadb-bin --binlog-format=ROW --server-id=3000
         ports:
             - "4001:3306"
 
-    primary2:
+    master2:
         image: mariadb:latest
         environment:
             MYSQL_ALLOW_EMPTY_PASSWORD: 'Y'
         volumes:
-            - ./sql/primary2:/docker-entrypoint-initdb.d
+            - ./sql/master2:/docker-entrypoint-initdb.d
             command: mysqld --log-bin=mariadb-bin --binlog-format=ROW --server-id=3001
         ports:
             - "4002:3306"
@@ -23,8 +23,8 @@ services:
     maxscale:
         image: mariadb/maxscale:latest
         depends_on:
-            - primary1
-            - primary2
+            - master1
+            - master2
         volumes:
             - ./maxscale.cnf.d:/etc/maxscale.cnf.d
         ports:
